Added background image

--- a/src/app/master/master.component.css
+++ b/src/app/master/master.component.css
@@ -23,7 +23,7 @@
 
 body {
   /* background-color: black; */
-  background-image: url('/assets/images.jpg');
+  background-image: url('/assets/ian1.jpg');
 }
 
 #swara {
