--- a/src/app/repo/repo.component.css
+++ b/src/app/repo/repo.component.css
@@ -6,7 +6,7 @@
 
 body {
   /* background-color: #dddddd; */
-  background-image: url('/assets/images.jpg');
+  background-image: url('/assets/ian1.jpg');
 }
 
 .row {
